tests/source1/pass/expr_strcat1.js
"123" + "456";
// expected: "123456"