tests/source1/fail/runtime_typecheck6.js
true + true;
// expected: error: "boo type mismatch"